# YT-HOME-RUST

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.sh  deny.toml  docker-compose.yml  install.sh  runSUI.sh  s-ui.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  release.yml  windows.yml
cmd/: cmd.go
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/domain-auth/: Cargo.toml
crates/domain-auth/src/: lib.rs
crates/domain-config/: Cargo.toml
crates/domain-config/src/: backup.rs  lib.rs  save.rs
crates/domain-core/: Cargo.toml
crates/domain-core/src/: lib.rs
crates/domain-stats/: Cargo.toml
crates/domain-stats/src/: lib.rs
crates/domain-subscription/: Cargo.toml
crates/domain-subscription/src/: convert.rs  lib.rs
crates/http-api/: Cargo.toml
crates/http-api/src/: lib.rs
crates/infra-db/: Cargo.toml
crates/infra-db/migrations/: 0001_init.sql  0002_nullable_tls_id.sql
crates/infra-db/src/: lib.rs
crates/infra-observability/: Cargo.toml
crates/infra-observability/src/: lib.rs
crates/infra-scheduler/: Cargo.toml
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  http.rs  lib.rs  model.rs  settings.rs
database/model/: inbounds.go
frontend/: eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.mts
frontend/src/: App.vue  vite-env.d.ts
frontend/src/components/: DateTime.vue  Dial.vue  Headers.vue  Main.vue  SubClashExt.vue  SubJsonExt.vue
frontend/src/components/protocols/: ShadowTls.vue  Tor.vue  Wireguard.vue
frontend/src/components/services/: SSMAPI.vue
frontend/src/components/tiles/: Gauge.vue  History.vue
frontend/src/components/tls/: Ech.vue
frontend/src/layouts/default/: Drawer.vue
frontend/src/layouts/modals/: Changes.vue  Client.vue  Dns.vue  DnsRule.vue  Endpoint.vue  Inbound.vue  QrCode.vue  Rule.vue  Stats.vue  Tls.vue  Token.vue  WgQrCode.vue
frontend/src/locales/: en.ts  fa.ts  index.ts  ru.ts  vi.ts  zhcn.ts  zhtw.ts
frontend/src/plugins/: httputil.ts  utils.ts  vuetify.ts
frontend/src/router/: index.ts
frontend/src/store/modules/: data.ts
frontend/src/types/: inbounds.ts  tls.ts
frontend/src/views/: Admins.vue  Basics.vue  Clients.vue  Dns.vue  Endpoints.vue  Inbounds.vue  Login.vue  Outbounds.vue  Rules.vue  Services.vue  Settings.vue  Tls.vue
packaging/: ct-init.sh
packaging/openrc/: sui
patches/tokio/: .cargo-checksum.json
patches/tokio/src/runtime/signal/: mod.rs
patches/tokio/src/signal/: unix.rs
scripts/: fetch-sing-box.sh
service/: inbound_proxy_home.go  inbound_proxy_home_test.go  inbounds.go  setting.go
sub/: clashService.go  inbound_filter.go  inbound_filter_test.go  jsonService.go  subHandler.go
util/: genLink.go  outJson.go  tls_test.go
windows/: README.md  build-windows.bat  build-windows.ps1  install-windows.bat  s-ui-windows.bat  s-ui-windows.xml  uninstall-windows.bat
