[workspace]
members = [
  "crates/app",
  "crates/domain-auth",
  "crates/domain-config",
  "crates/domain-core",
  "crates/domain-stats",
  "crates/domain-subscription",
  "crates/http-api",
  "crates/infra-db",
  "crates/infra-observability",
  "crates/infra-scheduler",
  "crates/shared",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-only"
rust-version = "1.88.0"
version = "2.0.0"

[workspace.dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["form", "http1", "json", "macros", "multipart", "tokio"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
base64 = "0.22.1"
if-addrs = "0.15.0"
mime_guess = "2.0.5"
percent-encoding = "2.3.1"
rand = "0.10.0"
rcgen = "0.14.7"
reqwest = { version = "0.13.2", default-features = false, features = ["charset", "http2", "json", "rustls", "socks"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sysinfo = "0.38.4"
sqlx = { version = "0.8.6", default-features = false, features = ["json", "migrate", "runtime-tokio-rustls", "sqlite", "time", "uuid"] }
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.51.1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tower-http = { version = "0.6.8", features = ["compression-gzip", "fs", "set-header", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
ulid = "1.2.1"
url = "2.5.4"
uuid = { version = "1.23.0", features = ["serde", "v4"] }
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

[profile.release]
strip = true

[patch.crates-io]
sqlx = { path = "vendor/sqlx" }
tokio = { path = "patches/tokio" }
