[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
domain-auth = { path = "../domain-auth" }
domain-config = { path = "../domain-config" }
domain-core = { path = "../domain-core" }
domain-stats = { path = "../domain-stats" }
domain-subscription = { path = "../domain-subscription" }
http-api = { path = "../http-api" }
if-addrs.workspace = true
infra-db = { path = "../infra-db" }
infra-observability = { path = "../infra-observability" }
infra-scheduler = { path = "../infra-scheduler" }
shared = { path = "../shared" }
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
