[package]
name = "domain-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
argon2.workspace = true
axum-extra.workspace = true
base64.workspace = true
infra-db = { path = "../infra-db" }
rand.workspace = true
serde.workspace = true
shared = { path = "../shared" }
sqlx.workspace = true
time.workspace = true
tracing.workspace = true
ulid.workspace = true
uuid.workspace = true

[lints]
workspace = true
