[package]
name = "domain-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
rcgen.workspace = true
reqwest.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
x25519-dalek.workspace = true

[lints]
workspace = true
