[package]
name = "http-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
axum-extra.workspace = true
domain-auth = { path = "../domain-auth" }
domain-config = { path = "../domain-config" }
domain-core = { path = "../domain-core" }
domain-stats = { path = "../domain-stats" }
domain-subscription = { path = "../domain-subscription" }
infra-db = { path = "../infra-db" }
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true

[lints]
workspace = true
