[package]
name = "infra-db"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde_json.workspace = true
shared = { path = "../shared" }
sqlx.workspace = true
time.workspace = true
tracing.workspace = true
ulid.workspace = true
uuid.workspace = true

[lints]
workspace = true
